# ai_doc_chat

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  doc.md  main.py  pyproject.toml  run_logfire.py
conf/: __init__.py
core/: __init__.py
core/connector/: constants.py  web.py
core/data_processor/: base.py  constants.py  docx_processor.py  markdown_processor.py
core/storage/: base.py  lancedb.py  milvus.py
lancedb/test.lance/_transactions/: 0-4d5cfdc6-dedb-40da-b0c8-22bf1fb6d456.txn
lancedb/test.lance/_versions/: 1.manifest
schema/: chat.py
service/: base_servicer.py  chat.py
service/milvus/: chat.py
src/ai_doc_chat/: __init__.py  chat.py  main.py
tests/: test_concurrencty.py  test_executor.py  test_index_url.py  test_limitor.py
utils/: __init__.py  concurrency.py  constants.py  executor.py  limitor.py  llm.py  log.py  prompt.py  run_config.py  tools.py  web.py  yalog.py
web/: __init__.py  web.py
