[project]
name = "aidocchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coloredlogs>=15.0.1",
    "langchain-community>=0.3.13",
    "langchain>=0.3.13",
    "pre-commit>=4.0.1",
    "pymilvus>=2.5.2",
    "ruff>=0.8.4",
    "langchain-text-splitters>=0.3.4",
    "simplemind[full]>=0.2.4",
    "unstructured[md]>=0.16.11",
    "nltk>=3.9.1",
    "markitdown>=0.0.1a3",
    "openai>=1.58.1",
    "dynaconf>=3.2.6",
    "gradio>=5.9.1",
    "pydantic>=2.10.4",
    "pytest>=8.3.4",
    "twisted>=24.11.0",
    "pytest-asyncio>=0.25.0",
]
